# pannb

./: .buildinfo  .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  environment.yml  index.html  makefile  objects.inv  output.json  output.txt  pyproject.toml  searchindex.js
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  example-output.doctree  example.doctree  index.doctree  installation.doctree  readme.doctree
.doctrees/api/: modules.doctree  pannb.doctree  pannb.util.doctree
.doctrees/nbsphinx/: example.ipynb
.github/workflows/: sphinx.yml  test.yml
_modules/: index.html
_modules/pannb/: index.html
_modules/pannb/util/: index.html
_sources/: example-output.rst.txt  example.rst.txt  installation.rst.txt
_sources/api/: modules.rst.txt  pannb.rst.txt  pannb.util.rst.txt
_static/: documentation_options.js
api/modules/: index.html
api/pannb/: index.html
api/pannb.util/: index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: README.md  badges.csv  conf.py  example-output.rst  example.ipynb  index.rst  requirements.txt
example/: index.html
example-output/: index.html
genindex/: index.html
installation/: index.html
py-modindex/: index.html
readme/: index.html
search/: index.html
src/pannb/: __init__.py  util.py
tests/: test_pandoc_filter.py
