[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pannb"
version = "0.1.0"
description = "pannb—pandoc filter for ipynb"
license = "BSD-3-Clause"
keywords = [
    "pandoc",
    "filter",
    "ipynb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
homepage = "https://github.com/ickc/pannb"
repository = "https://github.com/ickc/pannb"
documentation = "https://ickc.github.io/pannb"
authors = ["Kolen Cheung <christian.kolen@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "pannb", from = "src" },
]
include = [
    'LICENSE',
    'README.rst',
]

[tool.poetry.dependencies]
python = ">=3.8"
panflute = "^2.1"

# extras
coloredlogs = { optional = true, version = ">=14,<16" }

# tests
coverage = { optional = true, version = "*" }
coveralls = { optional = true, version = "*" }
# flake8 = { optional = true, version = "*" }
pytest = { optional = true, version = "*" }
pytest-cov = { optional = true, version = "*" }
# pytest-parallel = { optional = true, version = "*" }
# pytest-xdist = { optional = true, version = "*" }

# docs
sphinx = { optional = true, version = "^3.3" }
sphinx-bootstrap-theme = { optional = true, version = "*" }
sphinxcontrib-apidoc = { optional = true, version = "*" }
pantable = { optional = true, version = "^0.14" }
nbsphinx = { optional = true, version = ">=0.8" }
ipykernel = { optional = true, version = "*" }
pandas = { optional = true, version = "*" }

[tool.poetry.dev-dependencies]
isort = "*"
mypy = "*"
bandit = "*"
black = "*"
bump2version = "*"
ghp-import = "^2"
nbconvert = "^6"
pylint = "*"
rstcheck = "*"
types-PyYAML = "*"

[tool.poetry.extras]
extras = [
    "coloredlogs",
]
tests = [
    "coverage",
    "coveralls",
    # "flake8",
    "pytest",
    "pytest-cov",
    # "pytest-parallel",
    # "pytest-xdist",
]
docs = [
    "sphinx",
    "sphinx-bootstrap-theme",
    "sphinxcontrib-apidoc",
    "pantable",
    "nbsphinx",
    "ipykernel",
    "pandas",
]

[tool.poetry.scripts]
pannb = 'pannb:main'

[tool.coverage.paths]
source = [
    'src',
    '*/site-packages',
]

[tool.coverage.run]
branch = true
source = [
    'src',
    'tests',
]
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest.ini_options]

addopts = [
    '-ra',
    '--strict-markers',
    '--tb=auto',
]

testpaths = [
    'tests',
]

[tool.isort]
line_length = 120
known_first_party = 'pannb'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
profile = 'black'
skip = [
    '.eggs',
    'ci/templates',
    'build',
    'dist',
]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
experimental-string-processing = true
target-version = ['py38']
